--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "fetch": "^1.1.0",
     "mongoose": "^6.0.11",
     "passport": "^0.5.0",
+    "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7"
   }
 }
